# zenoh-windows-mwe

./: .gitignore  CMakeLists.txt  ConfigFolderPath.h.in  README.md  pixi.toml  pub.cxx  sub.cxx  zenohConfigPub.json5  zenohConfigSub.json5
